<resources>
    <string name="app_name">Proyecto3_B87107_B84211</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Cedula</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Contraseña invalida</string>
    <string name="login_failed">"Login failed"</string>
    <string name="detalles">"Mas Detalles"</string>
    <string name="ocultar_detalles">"Ocultar Detalles"</string>
    <string name="medi">"Medicamentos:"</string>
    <string name="desc">"Descripcion:"</string>
</resources>